Adjust cooperation carousel

--- a/assets/css/cooperationCarousel.css
+++ b/assets/css/cooperationCarousel.css
@@ -30,7 +30,7 @@
 
 .cooperation .cooperationContent {
     width: 95%;
-    height: 100%;
+    height: 300%;
     margin-top: -14%;
     background-color: rgb(236, 174, 236, 0.5);
 
@@ -40,27 +40,24 @@
     align-items: center;
 }
 
-.cooperation .sectionTitleDiv {
-    background-color: yellow;
-    /* margin: 0 20px 0 0; */
-    width: 33%;
-    /* height: 70%; */
-    /* margin-right: -30px; */
-}
-
-
-
-.cooperation .companyInfo {
-    margin-left: 16px;
-    background-color: darkorange;
+.cooperation .galleryNavContainer {
+    width: 50px;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    background-color: darkgreen;
+    height: 100%;
 }
 
-.cooperation .paddingTopRight {
-    padding-top: 30px;
-    padding-right: 20px;
+.cooperation .cooperationSectionTitleDiv {
+    background-color: yellow;
+    width: 30%;
+    /* height: 70%; */
+    /* margin-right: -30px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .cooperation .vertical {
@@ -71,31 +68,138 @@
     background-color: rgb(243, 173, 147, 0.5);
 }
 
-
-
-
-
 .cooperation hr {
     width: 60%;
     color: #888;
 }
 
-.cooperation .cooperationCarousel {
-    background-color: chartreuse; 
-    width: 60%;
+.cooperation .cooperationIntro {
+    margin: 5% 14% 0px 14%;
+    color: #ffbf00;
+    font-size: 1.3vw;
 }
 
-.cooperation .cooperationIntro {
-    margin: 10% 15% 0px 15%;
+.cooperation .cooperationGallery {
+    background-color: chartreuse; 
+    width: 57%;
+    height: 100%;
+
+    /* display: flex;
+    align-items: center;
+    position: relative; */
+}
+
+.cooperation .galleryCooperationContainer {
+    align-items: center;
+    display: flex;
+    position: relative;
+}
+
+.cooperation .galleryCooperationItem {
+    /* position: absolute; */
+    transition: all 0.3s ease-in-out;
+    z-index: 0;
+    background-color: #ffffff;
+    border-radius: 5px;
+    border: solid #ececec;
+    padding: 24px 14px;
+/* opacity: .4; */
+    width: 30%;
+}
+
+.cooperation .galleryCooperationItem:hover {
+    box-shadow: 0 5px 10px rgba(68, 88, 144);
+}
+
+.cooperation .galleryCooperationItemContent {
+    display: flex;
+    margin-top: 10px;
+    background-color: darkturquoise;
+}
+
+.cooperation .galleryCooperationItem .fas,
+.cooperation .galleryCooperationItem .positionTitle {
+    font-size: 1vw;
     color: #ffbf00;
 }
+
+.cooperation .galleryCooperationItem p {
+    margin-left: 4px;
+    text-align: center;
+    font-size: 1vw;
+    color: #535353;
+}
+
+.cooperation .galleryCooperationItem img {
+    width: 20%;
+    object-fit: contain;
+}
+
+.cooperation .galleryCooperationItem .companyInfo {
+    margin-left: 16px;
+    background-color: darkorange;
+    display: flex;
+    flex-direction: column;
+    /* justify-content: center; */
+    align-items: flex-start;
+}
+
+.cooperation .galleryCooperationItem .companyName {
+    font-size: 1vw;
+}
+
+/* =================================================================*/
+.cooperation .galleryCooperationItem.gallery-item-selected {
+    /* height: 250px; */
+    opacity: 1;
+    width: 55%;
+    z-index: 2;
+}
+
+.cooperation .galleryCooperationItem.gallery-item-selected .companyName {
+    font-weight: bold;
+    font-size: 1.5vw;
+}
+
+.galleryCooperationItem.gallery-item-previous,
+.galleryCooperationItem.gallery-item-next {
+    /* height: 230px; */
+    opacity: 1;
+    width: 40%;
+    z-index: 1;
+}
+
+/* .cooperation .galleryCooperationItem.gallery-item-previous {
+    transform: translate(130%, -50%);
+}
+
+.cooperation .galleryCooperationItem.gallery-item-next {
+    transform: translate(130%, 60%);
+} */
+
+/* .cooperation .galleryCooperationItem.gallery-item-first {
+    transform: translate(130%, -20%);
+}
+
+.cooperation .galleryCooperationItem.gallery-item-last {
+    transform: translate(130%, 60%);
+} */
+
+@media (max-width: 1270px) {
+    .cooperation .cooperationGallery {
+        width: 62%;
+    }
+}
+
+
+
+/*
 
 @media (max-width: 991px) {
     .cooperation .cooperationContent {
       display: flex;
       flex-direction: column;
       justify-content: flex-start;
-      /* margin-top: 0%; */
     }
 
     .cooperation .sectionTitleDiv {
@@ -112,62 +216,6 @@
       width: 100%;
       height: 57%;
     }
-
-    /* .cooperation img {
-      position: static;
-    } */
-}
-
-.cooperation .gallery {
-    /* width: 100%; */
-}
-
-.cooperation .galleryCooperationContainer {
-    align-items: center;
-    display: flex;
-    /* height: 300px; */
-    /* margin: 0 auto; */
-    /* max-width: 100%; */
-    position: relative;
-}
-
-.cooperation .galleryCooperationItem {
-    /* height: 200px; */
-    opacity: .4;
-    position: absolute;
-    transition: all 0.3s ease-in-out;
-    /* width: 150px; */
-    /* width: 30%; */
-    z-index: 0;
-    background-color: #ffffff;
-    border-radius: 5px;
-    border: solid rgb(209, 208, 208);
-}
-
-.cooperation .galleryCooperationItem:hover {
-    box-shadow: 0 5px 10px rgba(68, 88, 144);
-}
-
-.cooperation .galleryCooperationItem img {
-    width: 20%;
-    /* height: auto; */
-    /* z-index: 3; */
-    object-fit: contain;
-    /* align-self: flex-start; */
-}
-
-.cooperation .galleryCooperationItem .positionTitle,
-.cooperation .galleryCooperationItem .fas {
-    color: #ffbf00;
-}
-
-.cooperation .galleryCooperationItem .companyName {
-    font-weight: bold;
-}
-
-.cooperation .galleryCooperationItem .positionTitle,
-.cooperation .galleryCooperationItem .companyName {
-    font-size: 1vw;
 }
 
 .cooperation .galleryCooperationItem h3 {
@@ -178,80 +226,20 @@
     height: 75%;
 }
 
-.cooperation .galleryCooperationItem p {
-    /* padding-top: 3%;
-    padding-bottom: 3%; */
-    margin-left: 10px;
-    text-align: center;
-    font-size: 1vw;
-    color: #535353;
-}
 
-.cooperation .galleryCooperationItemContent {
-    display: flex;
-    /* flex-direction: row; */
-    /* justify-content: flex-start; */
-    
-    height: 50%;
-    margin-left: 20px;
-    background-color: darkturquoise;
-}
 
-.cooperation .galleryCooperationItem.gallery-item-selected {
-    /* box-shadow: 0 0 30px rgba(255, 255, 255, 0.6), 0 0 60px rgba(255, 255, 255, 0.45), 0 0 110px rgba(255, 255, 255, 0.25), 0 0 100px rgba(255, 255, 255, 0.1); */
-    
-    height: 250px;
-    opacity: 1;
 
-    /* width: 300px; */
-    width: 55%;
-    z-index: 2;
-}
 
-.cooperation .galleryCooperationItem.gallery-item-selected .companyInfo {
-    /* margin-top: 10px; */
-    text-align: start;
-}
 
-.cooperation .galleryCooperationItem.gallery-item-selected .companyName {
-    font-size: 1.5vw;
-}
-
-.galleryCooperationItem.gallery-item-previous,
-.galleryCooperationItem.gallery-item-next {
-    height: 230px;
-    opacity: 1;
-    /* width: 200px; */
-    width: 40%;
-    z-index: 1;
-}
-
-.cooperation .galleryCooperationItem.gallery-item-previous {
-    transform: translate(130%, -50%);
-}
-
-.cooperation .galleryCooperationItem.gallery-item-next {
-    transform: translate(130%, 60%);
-}
-
-.cooperation .galleryCooperationItem.gallery-item-first {
-    transform: translate(130%, -20%);
-}
-
-.cooperation .galleryCooperationItem.gallery-item-last {
-    transform: translate(130%, 60%);
-}
 
 .cooperation .galleryCooperationControls {
     display: flex;
     justify-content: space-between;
-    /* margin: 30px 0; */
     position: absolute;
     z-index: 2;
     top: 50%;
     left: 25%;
     width: 50%;
-    /* background-color: crimson; */
 }
 
 .cooperation .galleryCooperationControls .controlButton {
@@ -264,17 +252,10 @@
 .cooperation .galleryCooperationControls .controlButton:hover {
     color: #ffffff;
     background-color: #1976D2;
-    /* border-radius: 50%; */
     box-shadow: 0 0 20px rgba(33, 33, 33, .2);
 }
 
-.cooperation .galleryNavContainer {
-    width: 50px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    background-color: darkgreen;
-}
+
 
 .cooperation .galleryNavItem {
     background: #ccc;
@@ -296,9 +277,6 @@
 }
 
 @media (max-width: 910px) {
-    /* .gallery-item-content {
-        background: linear-gradient(93deg, #d6e7f7  10%, rgba(0,0,0,0) 10%), linear-gradient(98deg, #c2daf3 18%, #9ac2ec 18%);
-    } */
     .cooperation .galleryCooperationItem {
         width: 150px;
         height: 250px;
@@ -307,10 +285,6 @@
         height: 150px;
         font-size: 5px;
     }
-
-    /* .galleryCooperationItem.gallery-item-selected {
-        width: 90%;
-    } */
 }
 
 @media (min-width: 365px) and (max-width: 991px) {
@@ -321,7 +295,6 @@
 
     .cooperation .galleryCooperationItem.gallery-item-previous,
     .cooperation .galleryCooperationItem.gallery-item-next {
-        /* width: 150px; */
         width: 45%;
         height: 280px;
     }
@@ -337,14 +310,9 @@
         left: 15%;
     }
 
-    .cooperation .galleryCooperationItem.gallery-item-selected p {
-        /* font-size: 2vw; */
-    }
-
     .cooperation .galleryCooperationItem.gallery-item-selected img {
         width: 15%;
         height: inherit;
-        /* height: 50%; */
     }
 
     .cooperation .galleryCooperationItem.gallery-item-previous,
@@ -372,7 +340,6 @@
     .cooperation .galleryCooperationItem.gallery-item-previous,
     .cooperation .galleryCooperationItem.gallery-item-next {
         width: 200px;
-        /* width: 60%; */
         height: 280px;
     }
 
@@ -411,4 +378,4 @@
     .cooperation .galleryNavContainer {
         display: none;
     }
-}
+} */
